# ledger-server

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  diesel.toml
.github/workflows/: build.yml  rust.yml
ledger-lambda/: Cargo.toml
ledger-lambda/package/: Dockerfile
ledger-lambda/src/: main.rs
ledger-lib/: Cargo.toml
ledger-lib/src/: config.rs  error.rs  lib.rs
ledger-lib/src/auth/: jwt.rs  mod.rs
ledger-lib/src/transaction/: handlers.rs
ledger-lib/src/transaction_template/: handlers.rs  mod.rs
ledger-lib/src/user/: handlers.rs
ledger-lib/tests/: test_create_new_transaction.rs  test_delete_transaction.rs  test_get_transaction.rs  test_get_transactions.rs  test_update_transaction.rs
ledger-lib/tests/utils/: mock.rs  mod.rs
ledger-repo/: Cargo.toml  diesel.toml  sqlx-data.json
ledger-repo/.sqlx/: query-10f2b7843681aef39b53cbc0dfccab964ce34f343ce4ca547c71c365c305f98b.json  query-1c9204d72da497eb2c15ced714b510d7fb0d3f146c6ad97658889ddb57d7b384.json  query-24ea33795a75c8cf5a55ee719369e1860de7e7e46cddfd4dcb02a4452c9856bf.json  query-4b0c31cd57945acd51c2080e9acb6421808f5f2320c851fb0a27aa3ab50c5a64.json  query-4e7c5f3a23859e8ef19b6e5c0d3d704c59f8fee5a4b974b591ee55bb307d77c5.json  query-54eca93c66f9b9898779c7a165f8ae5610c8347b36faaddae726fe24132cbed8.json  query-7da4a145b913e1e481dbce3a57ed45cfad77b93a875bc638aad1c6dd689dd86d.json  query-83d2c454f93ec995e5942109e7e5ca2b29ea9a5f79dd8a4c0b89f38c282a8678.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-8a5c2158733d6037460d4434ca68221975cbf15a8b39b5848ebb6182023a5d4d.json  query-933d5f9e2e41d859794ea45a28c719c8f64ba0436cb1dc09eadd2c643089c702.json  query-96065a3c529f2f89432afc2ece4bcf4337bd61f5ee108edf7fdba943340fe94c.json  query-9735a71b62f090e40dd5fdb247196310e6fa05c2960acd499f9a067c18900651.json  query-976ab167e7319a184e11311549a1a1d35c6140db4a8dc4985e86bdad2b97c803.json  query-a74e692d0ca86c246306926d075e5a99327614cd148a85c03e019a7cbf25c430.json  query-a89c8671d2e3b4a485c339321c6658b06a1a7b8f45b2f32c8276288f326d6e11.json  query-ad3d8b1b025bb52ef8d92cc755656c43ac6b27d499984c607ef80eb07e354d8b.json  query-af5553fa0019ee82e0e1aee2804cc74676ad3aee8ad1eef087ab154fe5715627.json  query-d1bd7637b4faecd17a33d73debb671dc2baca8784c50bdbc07149e569612a88d.json  query-d9f54a23dd870cc971dd917cb5ab4e84bdfb0919c49ea6cddb6e43f714a90d57.json  query-dd64ef5a5a152089775d4d00f4d439e7592dac0d42b997218e656af1fc3cea80.json  query-dde30018f360ebebd0298a023e17bbb6255c61e06995c8b605a550f211bb918c.json  query-dfd15f83cc372b698a333b927c47b2f42b0260ddd967336bc9da19b8dd86a2e1.json  query-e05bd1a5e4c25edec66f15c67b9f442266cba7b870232f21384fbcf31c4ef2e1.json  query-ec10967dc7f81dec0caf8b5751653eab6c85bd7b7a454d5ebb2014aead89699d.json  query-ed604e482d1cc1716c1bc3f5663b29b5992b74127330b1afddd191ef63667eb5.json  query-f64bbce2a9d398a380f9febdde92581d7c871d71c4cac88e5703034c9e087212.json  query-ffba5720b2407c09843992416ce7c7875816d748b8adc13d8bf506de62f1d2d5.json
ledger-repo/migrations/2021-04-18-170551_create_transaction/: up.sql
ledger-repo/migrations/2021-06-08-065050_add_date/: down.sql
ledger-repo/migrations/2021-07-06-170425_optional_transactee/: down.sql
ledger-repo/migrations/2021-09-14-152430_create_transaction_tags/: down.sql  up.sql
ledger-repo/migrations/2021-10-30-161124_rename_transaction_date/: up.sql
ledger-repo/migrations/2022-07-27-153601_add_user/: up.sql
ledger-repo/migrations/2022-07-30-083608_user_in_transaction/: down.sql
ledger-repo/migrations/2022-10-01-151033_cascade_user_delete/: down.sql
ledger-repo/migrations/2023-05-04-170018_transaction_date_index/: down.sql  up.sql
ledger-repo/migrations/2024-10-28-123836_inline_tags/: down.sql  up.sql
ledger-repo/migrations/2024-10-29-112134_drop_transaction_tags/: down.sql  up.sql
ledger-repo/migrations/2024-12-29-110906_create_transaction_templates/: down.sql  up.sql
ledger-repo/migrations/2025-01-05-082307_transaction_template_name/: down.sql  up.sql
ledger-repo/src/: lib.rs  transaction_repo.rs  transaction_template_repo.rs  user_repo.rs
ledger-repo/src/diesel_repo/: mod.rs  schema.rs  transaction_repo.rs  user_repo.rs
ledger-repo/src/mem_repo/: mod.rs  transaction_repo.rs  transaction_template_repo.rs  user_repo.rs
ledger-repo/src/sqlx_repo/: mod.rs  transaction_repo.rs  transaction_template_repo.rs  user_repo.rs
ledger-repo/tests/: test_transaction_repos.rs  test_transaction_template_repos.rs  test_user_repos.rs
ledger-repo/tests/transaction_utils/: mod.rs  test_user.rs
ledger-repo/tests/utils/: generator.rs  mod.rs  test_user.rs
ledger-server/: Cargo.toml
ledger-server/package/: Dockerfile
ledger-server/package/docker/: docker.nix  push-image.sh
ledger-server/package/pacman/: PKGBUILD
ledger-server/src/: main.rs
migrations/2021-06-08-065050_add_date/: up.sql
migrations/2021-07-06-170425_optional_transactee/: up.sql
migrations/2021-09-12-072413_add_amount/: down.sql  up.sql
migrations/2021-10-30-161124_rename_transaction_date/: down.sql
migrations/2022-07-30-083608_user_in_transaction/: up.sql
migrations/2022-10-01-151033_cascade_user_delete/: up.sql
package/: PKGBUILD  config.toml  ledger-server.service  ledger-server.sysusers.conf
package/lambda/: Dockerfile
package/pacman/: PKGBUILD  config.toml  ledger-server.service
package/server/: Dockerfile
src/: auth.rs  config.rs  error.rs  lambda.rs  lib.rs  main.rs  models.rs  schema.rs  tracing.rs  transaction_handlers.rs
src/auth/: handlers.rs  jwt.rs  mod.rs  password.rs
src/repo/: mod.rs  transaction_repo.rs  user_repo.rs
src/repo/diesel/: mod.rs  transaction_repo.rs  user_repo.rs
src/repo/sqlx/: mod.rs  transaction_repo.rs  user_repo.rs
src/transaction/: handlers.rs  mod.rs  models.rs
src/user/: handlers.rs  mod.rs  models.rs
tests/: test_create_new_transaction.rs  test_delete_transaction.rs  test_get_all_transactions.rs  test_get_transaction.rs  test_get_transactions.rs  test_update_transaction.rs
tests/utils/: mock.rs  mod.rs
