[workspace]
members = [
    "ledger-repo"
]

[package]
name = "ledger"
version = "0.6.1"
authors = ["Ahmed Rafiq Ullah <ahmedrafiq47@gmail.com>"]
license = "MIT"
edition = "2021"

[[bin]]
name = "ledger-server"
path = "src/main.rs"
required-features = ["server"]

[[bin]]
name = "ledger-lambda"
path = "src/lambda.rs"
required-features = ["lambda"]

[dependencies]
ledger-repo = { path = "ledger-repo" }
actix-web = "4.0.1"
actix-web-httpauth = "0.8.0"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
rust_decimal = { version = "1.26.1" }
tracing = "0.1.26"
tracing-subscriber = "0.3.11"
tracing-actix-web = "0.6.0"
jsonwebtoken = "8.1.1"
toml = "0.5.8"
rust-argon2 = "1.0.0"
rand = "0.8.5"
thiserror = "1.0.33"
anyhow = "1.0.63"
lambda-web = { version = "0.2.0", features = ["actix4"], optional = true }
base64 = { version = "0.13.1", optional = true }
async-trait = "0.1.58"

[features]
default = ["server"]
server = []
lambda = ["lambda-web", "base64"]
diesel-repo = ["ledger-repo/diesel-repo"]

[dev-dependencies]
actix-rt = "2.2.0"
futures-util = "0.3.15"
futures = "0.3.15"
rstest = "0.15.0"
base64 = "0.13.0"
uuid = "1.1.2"
