[workspace]
members = [
    "ledger-repo",
    "ledger-lib",
    "ledger-lambda",
    "ledger-server"
]
default-members = ["ledger-server"]
# https://github.com/rust-lang/cargo/issues/10112
resolver = "2"

[workspace.package]
version = "0.9.2"
authors = ["Ahmed Rafiq Ullah <ahmedrafiq47@gmail.com>"]
license = "MIT"
edition = "2021"

[workspace.dependencies]
ledger-repo = { path = "ledger-repo" }
ledger-lib = { path = "ledger-lib" }
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
actix-rt = "2.2.0"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
rust_decimal = "1.26.1"
tracing = "0.1.26"
tracing-subscriber = "0.3.11"
tracing-actix-web = "0.7.2"
tracing-opentelemetry = "0.19.0"
jsonwebtoken = "8.1.1"
toml = "0.7.2"
rust-argon2 = "1.0.0"
rand = "0.8.5"
thiserror = "1.0.33"
anyhow = "1.0.63"
async-trait = "0.1.58"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.12.0"
tonic = { version = "0.8.3", features = ["tls-roots"] }
lambda-web = { version = "0.2.1", features = ["actix4"] }
base64 = "0.21.0"
diesel = { version = "2.1.0", features = ["chrono", "postgres", "r2d2"] }
diesel_migrations = "2.1.0"
r2d2 = "0.8.10"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "chrono", "rust_decimal"] }
futures-util = "0.3.15"
futures = "0.3.15"
rstest = "0.18.1"
fake = { version = "2.5.0", features = ["chrono", "rust_decimal"] }
uuid = { version = "1.1.2", features = ["v4"] }
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
