[package]
name = "ledger-lambda"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ledger-repo = { workspace = true }
ledger-lib = { workspace = true }
actix-web = { workspace = true }
actix-web-httpauth = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lambda-web = { workspace = true }
base64 = { workspace = true }
