[package]
name = "ledger-lib"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ledger-repo = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
actix-web = { workspace = true }
actix-web-httpauth = { workspace = true }
rust-argon2 = { workspace = true }
rand = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
tonic = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
actix-rt = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
rstest = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
