[package]
name = "ledger-repo"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.0.2", features = ["chrono", "postgres", "r2d2"], optional = true }
diesel_migrations = { version = "2.0.0", optional = true }
r2d2 = { version = "0.8.10", optional = true }
actix-web = { version = "4.0.1", optional = true } # For blocking calls in diesel repo
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres", "chrono", "decimal", "offline"] }
chrono = { version = "0.4.19", features = ["serde"] }
rust_decimal = { version = "1.27.0" }
async-trait = "0.1.58"
anyhow = "1.0.63"
thiserror = "1.0.33"
serde = { version = "1.0.125", features = ["derive"] }
tracing = "0.1.26"

[features]
diesel-repo = ["diesel", "diesel_migrations", "r2d2", "actix-web", "rust_decimal/db-diesel2-postgres"]

[dev-dependencies]
actix-rt = "2.2.0"
rstest = "0.15.0"
toml = "0.5.8"
uuid = { version = "1.1.2", features = ["v4"] }
fake = { version = "2.5.0", features = ["chrono", "rust_decimal"] }
rand = "0.8.5"
