[package]
name = "ledger-repo"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
sqlx = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
actix-rt = { workspace = true }
rstest = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
fake = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
