[package]
name = "ledger-server"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ledger-repo = { workspace = true }
ledger-lib = { workspace = true }
actix-web = { workspace = true, features = ["rustls"] }
actix-web-httpauth = { workspace = true }
actix-cors = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
